--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,20 +11,14 @@ repos:
       - id: end-of-file-fixer
       - id: trailing-whitespace
       - id: no-commit-to-branch
-        args: [--branch, main]  # Specify the branch to prevent direct commits
-
-  - repo: https://github.com/psf/black
-    rev: 23.10.1
-    hooks:
-      - id: black
-        language_version: python3
-        args: [--line-length=100]
+        args: [--branch, main] # Specify the branch to prevent direct commits
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.1.4
+    rev: v0.4.4
     hooks:
       - id: ruff
         args: [--fix, --exit-non-zero-on-fix]
+      - id: ruff-format
 
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v3.0.3
