--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ target-version = "py39"
 fix = true
 
 [tool.ruff.lint]
-select=["E", "B", "F", "UP", "I001", "T201", "T203"]
+select=["E", "B", "F", "UP", "I001"]
 ignore=[
   # Recommened ignores by ruff when using formatter
   "E501",
