Tenacity package is now used for handling timing of calls

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ crewai = "^0.30.11"
 duckduckgo-search = "^6.1.0"
 langchain_google_genai = "^1.0.4"
 python-dotenv = "^1.0.1"
+tenacity = "^8.3.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.4.4"
