--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ tenacity = "^8.3.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.4.4"
+pytest = "^8.3.1"
 
 [tool.poetry.scripts]
 run-scan = "scan.main:main"
