--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ duckduckgo-search = "^6.1.0"
 langchain_google_genai = "^1.0.4"
 python-dotenv = "^1.0.1"
 tenacity = "^8.3.0"
+openai = "^1.52.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.4.4"
