--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,17 +6,17 @@ authors = ["John Doe <john.doe@example.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = ">=3.10, <=3.13"  # The way crewai set its python requirement made this necessary
+python = ">=3.10, <=3.13"
 crewai = "0.30.11"
 duckduckgo-search = "^6.1.0"
 langchain_google_genai = "^1.0.4"
 python-dotenv = "^1.0.1"
 tenacity = "^8.3.0"
-openai = "^1.52.1"
 tiktoken = "0.7.0"
 langchain-community = "0.0.25"
 langchain = "0.1.10"
 chromadb = "^0.5.15"
+openai = "^1.52.2"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "0.4.4"
@@ -37,7 +37,6 @@ fix = true
 [tool.ruff.lint]
 select=["E", "B", "F", "UP", "I001"]
 ignore=[
-  # Recommened ignores by ruff when using formatter
   "E501",
   "W191",
   "E111",
