--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ license = "MIT"
 python = ">=3.10, <=3.13"
 crewai = "0.30.11"
 duckduckgo-search = "^6.1.0"
-langchain_google_genai = "^1.0.4"
+langchain-google-genai = "^1.0.4"
 python-dotenv = "^1.0.1"
 tenacity = "^8.3.0"
-tiktoken = "0.7.0"
+tiktoken = ">=0.5.2,<0.6.0"
 langchain-community = "0.0.25"
-langchain = "0.1.10"
+langchain = ">=0.1.10, <0.2.0"  # Updated version range for compatibility
+langchain-openai = "^0.0.5"
 chromadb = "^0.5.15"
 openai = "^1.52.2"
 
@@ -31,12 +32,12 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.ruff]
 line-length = 100
-target-version = "py39"
+target-version = "py310"
 fix = true
 
 [tool.ruff.lint]
-select=["E", "B", "F", "UP", "I001"]
-ignore=[
+select = ["E", "B", "F", "UP", "I001"]
+ignore = [
   "E501",
   "W191",
   "E111",
