--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -12,22 +12,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install Poetry
-        run: pipx install poetry
-      - name: Configure poetry
-        run: |
-          poetry config virtualenvs.create true
-          poetry config virtualenvs.in-project true
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          cache: "poetry"
       - name: Install Dependencies
-        run: poetry install
+        run: uv sync --frozen
       - name: Ruff format check
-        run: poetry run ruff format scan --check
+        run: uv run ruff format scan --check
       - name: Lint with ruff
-        run: poetry run ruff check scan
+        run: uv run ruff check scan
       - name: mypy check
-        run: poetry run mypy .
+        run: uv run mypy scan
