--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ dependencies = [
   "langchain-openai==0.2.6",
   "mypy[faster-cache]==1.13.0",
   "openai==1.54.3",
-  "python-dotenv==1.0.1",
+  "pydantic-settings==2.6.1",
   "tenacity==9.0.0",
   "tiktoken==0.7.0",
 ]
