Add tests for main

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -28,3 +28,23 @@ jobs:
         run: uv run ruff check scan
       - name: mypy check
         run: uv run mypy scan
+  testing:
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ["3.10", "3.11", "3.12"]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+        with:
+          enable-cache: true
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Install Dependencies
+        run: uv sync --frozen
+      - name: Run tests
+        run: uv run pytest tests
