--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
   "chromadb==0.5.18",
   "crewai==0.76.9",
   "duckduckgo-search==6.3.4",
+  "google-search-results==2.4.2",
   "langchain==0.3.7",
   "langchain-community==0.3.4",
   "langchain-google-genai==2.0.4",
